[package]
name = "elevator_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8"
iced = { version = "0.3", features = ["debug", "image", "tokio", "wgpu"] } # GUI
tokio = { version = "1.18", features = ["sync"] }